Template poster + couleurs

--- a/index.html
+++ b/index.html
@@ -13,41 +13,53 @@
     </header>
 
     <main>
-        <!-- Section du programme de la journée -->
-        <section id="programme">
-            <h2>Programme de la Journée</h2>
-            <ul>
-                <li><strong>09:00 - 10:30 :</strong> Session d'ouverture</li>
-                <li><strong>10:45 - 12:00 :</strong> Session de présentations orales</li>
-                <li><strong>12:00 - 13:30 :</strong> Déjeuner</li>
-                <li><strong>13:30 - 15:00 :</strong> Ateliers thématiques</li>
-                <li><strong>15:15 - 16:30 :</strong> Session de clôture</li>
-            </ul>
-        </section>
 
         <!-- Section des infos pratiques -->
         <section id="infos-pratiques">
             <h2>Informations Pratiques</h2>
-            <p><strong>Date :</strong> Vendredi 28 mars 2025</p>
-            <p><strong>Heure :</strong> Début 09:00 - Fin 17h:00</p>
-            <p><strong>Lieu :</strong> Centre de Conférences de la Ville</p>
+            <p><strong>Date :</strong> Vendredi 28 mars 2025, de 08:30 à 17:15</p>
+            <p><strong>Lieu :</strong> Salle Agora du Haut-Carré - 43 Rue Pierre Noailles à Talence</p>
+        </section>
+
+        <!-- Section du programme de la journée -->
+        <section id="programme">
+            <h2>Programme de la Journée</h2>
+            <ul>
+                <li><strong>08:30 - 09:00 :</strong> Accueil café</li>
+                <li><strong>09:00 - 09:10 :</strong> Présentation de la journée</li>
+                <li><strong>09:10 - 09:35 :</strong> Valorisation de la recherche</li>
+                <li><strong>09:35 - 10:00 :</strong> Médiation scientifique</li>
+                <li><strong>10:00 - 11:15 :</strong> Session poster 1 autour d'un café</li>
+                <li><strong>11:15 - 11:30 :</strong> Présentation 1</li>
+                <li><strong>11:30 - 11:45 :</strong> Présentation 2</li>
+                <li><strong>11:45 - 12:00 :</strong> Présentation 3</li>
+                <li><strong>12:00 - 12:15 :</strong> Election des nouveaux représentants des doctorants</li>
+                <li><strong>12:15 - 13:40 :</strong> Pause déjeuner</li>
+                <li><strong>13:40 - 14:00 :</strong> Super présentation</li>
+                <li><strong>14:00 - 14:15 :</strong> Présentation 4</li>
+                <li><strong>14:15 - 14:30 :</strong> Présentation 5</li>
+                <li><strong>14:30 - 14:45 :</strong> Présentation 6</li>
+                <li><strong>14:45 - 16:00 :</strong> Session poster 2 autour d'un café</li>
+                <li><strong>16:00 - 17:00 :</strong> Remise des prix du concours photo</li>
+                <li><strong>17:00 - 17:15 :</strong> Clôture de la journée</li>
+            </ul>
         </section>
 
         <!-- Navigation vers les rubriques supplémentaires -->
         <nav id="rubriques">
             <h2>Rubriques</h2>
             <ul>
-                <li><a href="./poster-sessions.html">Programme des Sessions Posters</a></li>
-                <li><a href="#photo-contest">Concours Photos</a></li>
-                <li><a href="#doctoral-school">Présentation de l'École Doctorale</a></li>
+                <li><a href="./poster-sessions-1.html">Programme de la 1ère session posters</a></li>
+                <li><a href="./poster-sessions-2.html">Programme de la 2ème session posters</a></li>
+                <li><a href="#photo-contest">Galerie du concours photos</a></li>
                 <li><a href="#association">Présentation de CAP Sciences</a></li>
-                <li><a href="#access-map">Plan d'Accès</a></li>
+                <li><a href="#about">A propos de cette journée</a></li>
             </ul>
         </nav>
     </main>
 
     <footer>
-        <p>&copy; 2024 Conférence Scientifique. Tous droits réservés.</p>
+        <p>&copy; 2024 Ecole Doctorale SPI - Univ. Bordeaux. Tous droits réservés.</p>
     </footer>
 </body>
 </html>
