Navigation + sous-titres

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Journée de l'école doctorale SPI</h1>
-        <p>Un événement pour les doctorants et tous les passionnés de la science</p>
+        <h1>Journée de l'école doctorale SPI 2025</h1>
+        <p>Un événement pour les doctorants et tous les passionnés de sciences</p>
     </header>
 
     <main>
