--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <ul>
                 <li><a href="./poster-sessions-1.html">Programme de la 1ère session posters</a></li>
                 <li><a href="./poster-sessions-2.html">Programme de la 2ème session posters</a></li>
-                <li><a href="#photo-contest">Galerie du concours photos</a></li>
+                <li><a href="./photo-contest.html">Galerie du concours photos</a></li>
                 <li><a href="#association">Présentation de CAP Sciences</a></li>
                 <li><a href="#about">A propos de cette journée</a></li>
             </ul>
