--- a/photo-contest.html
+++ b/photo-contest.html
@@ -16,7 +16,8 @@
     <main>
         <section class="gallery">
             <h2>Gallerie du concours photos</h2>
-
+            <h3 style="color: red;">Les 5 chats affichés ne font pas partis du concours.</h3>
+            <br>
             <div class="gallery-grid">
                 <!-- Exemple de photos -->
                 <!-- https://drive.google.com/file/d/10hzLeDHZZXqAtN4E0Zt-IZ3nMV2cDtAB/view?usp=drive_link -->
@@ -26,13 +27,16 @@
                             <img src="https://drive.google.com/thumbnail?id=10hzLeDHZZXqAtN4E0Zt-IZ3nMV2cDtAB" alt="Kitty 1">
                         </div>
                     </a>
+                    <p class="image-description">Kitty 1 - Channihilateur selon une IA générative</p> <!-- Description sous l'image -->
                 </div>
+
                 <div class="gallery-item">
                     <a href="https://drive.google.com/uc?export=view&id=1ElNSdEuQckEfsKR23Jo38b0cGWXCLFK6" target="_blank">
                         <div class="thumbnail-container">
                             <img src="https://drive.google.com/thumbnail?id=1ElNSdEuQckEfsKR23Jo38b0cGWXCLFK6" alt="Kitty 2">
                         </div>
                     </a>
+                    <p class="image-description">Kitty 2 - Chactambule selon une IA générative</p> <!-- Description sous l'image -->
                 </div>
                 <div class="gallery-item">
                     <div class="thumbnail-container">
@@ -40,6 +44,7 @@
                             <img src="https://drive.google.com/thumbnail?id=1fBULs8HS01-fuhQmir-_DwXqTXmeptbm" alt="Kitty 3">
                         </a>
                     </div>
+                    <p class="image-description">Kitty 3 - Chapeur pompier selon une IA générative</p> <!-- Description sous l'image -->
                 </div>
                 <div class="gallery-item">
                     <div class="thumbnail-container">
@@ -47,17 +52,27 @@
                             <img src="https://drive.google.com/thumbnail?id=1QxGQh6L4CqMoepJiUJz5YAal73o9ys81" alt="Kitty 4">
                         </a>
                     </div>
+                    <p class="image-description">Kitty 4 - Channiversaire selon une IA générative</p> <!-- Description sous l'image -->
                 </div>
                 <div class="gallery-item">
                     <div class="thumbnail-container">
                         <a href="https://drive.google.com/uc?export=view&id=1VM3Wb409yEpmWCgZlLY6rYQa_ZTE45s8" target="_blank">
                             <img src="https://drive.google.com/thumbnail?id=1VM3Wb409yEpmWCgZlLY6rYQa_ZTE45s8" alt="Kitty 5">
                         </a>
-                    <div>
+                    </div>
+                    <p class="image-description">Kitty 5 - Charc-en-ciel selon une IA générative</p> <!-- Description sous l'image -->
                 </div>
                 <!-- Ajoutez d'autres images selon besoin -->
             </div>
         </section>
+
+        <nav id="rubriques">
+            <h2>Navigation</h2>
+            <ul>
+                <li><a href="./index.html">Programme de la journée</a></li>
+                <li><a href="./about.html">A propos de cette journée</a></li>
+            </ul>
+        </nav>
     </main>
 
 
