--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <!-- Navigation vers les rubriques supplémentaires -->
         <nav id="rubriques">
-            <h2>Rubriques</h2>
+            <h2>Navigation</h2>
             <ul>
                 <li><a href="./poster-sessions-1.html">Programme de la 1ère session posters</a></li>
                 <li><a href="./poster-sessions-2.html">Programme de la 2ème session posters</a></li>
