--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 
     <script>
         // Charger et afficher les données JSON
-        fetch("https://drive.google.com/file/d/1c5DjUgOP7X5gKP7mGpGJhpr2KoabDJMY/view?usp=sharing")
+        fetch("https://jed-spi.github.io/data.json")
             .then(response => response.json())
             .then(data => { console.log(data)
                 const gallery = document.getElementById('gallery');
