Dossier JSON + js pour programme de la journée

--- a/photo-contest.html
+++ b/photo-contest.html
@@ -36,7 +36,7 @@
 
     <script>
         // Charger et afficher les données JSON
-        fetch('data.json')
+        fetch('data/gallery.json')
             .then(response => response.json())
             .then(data => {
                 const gallery = document.getElementById('gallery');
