--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     </header>
 
     <main>
-
         <!-- Section des infos pratiques -->
         <section id="infos-pratiques">
             <h2>Informations Pratiques</h2>
@@ -23,24 +22,8 @@
         <!-- Section du programme de la journée -->
         <section id="programme">
             <h2>Programme de la Journée</h2>
-            <ul>
-                <li><strong>08:30 - 09:00 :</strong> Accueil café</li>
-                <li><strong>09:00 - 09:10 :</strong> Présentation de la journée</li>
-                <li><strong>09:10 - 09:35 :</strong> Valorisation de la recherche</li>
-                <li><strong>09:35 - 10:00 :</strong> Médiation scientifique</li>
-                <li><strong>10:00 - 11:15 :</strong> Session poster 1 autour d'un café</li>
-                <li><strong>11:15 - 11:30 :</strong> Présentation 1</li>
-                <li><strong>11:30 - 11:45 :</strong> Présentation 2</li>
-                <li><strong>11:45 - 12:00 :</strong> Présentation 3</li>
-                <li><strong>12:00 - 12:15 :</strong> Election des nouveaux représentants des doctorants</li>
-                <li><strong>12:15 - 13:40 :</strong> Pause déjeuner</li>
-                <li><strong>13:40 - 14:00 :</strong> Super présentation</li>
-                <li><strong>14:00 - 14:15 :</strong> Présentation 4</li>
-                <li><strong>14:15 - 14:30 :</strong> Présentation 5</li>
-                <li><strong>14:30 - 14:45 :</strong> Présentation 6</li>
-                <li><strong>14:45 - 16:00 :</strong> Session poster 2 autour d'un café</li>
-                <li><strong>16:00 - 17:00 :</strong> Remise des prix du concours photo</li>
-                <li><strong>17:00 - 17:15 :</strong> Clôture de la journée</li>
+            <ul id="programme-list">
+                <!-- Contenu généré par JavaScript -->
             </ul>
         </section>
 
@@ -60,5 +43,24 @@
     <footer>
         <p>&copy; 2024 Ecole Doctorale SPI - Univ. Bordeaux. Tous droits réservés.</p>
     </footer>
+
+    <script>
+        // Charger le fichier JSON et générer le contenu du programme
+        fetch('data/schedule.json')
+            .then(response => response.json())
+            .then(schedule => {
+                const programmeList = document.getElementById('programme-list');
+                schedule.forEach(event => {
+                    const listItem = document.createElement('li');
+                    listItem.innerHTML = `
+                        <strong>${event.start} - ${event.end} :</strong>
+                        ${event.title}
+                        ${event.link ? `<a href="${event.link}">[lien]</a>` : ''}
+                    `;
+                    programmeList.appendChild(listItem);
+                });
+            })
+            .catch(error => console.error('Erreur lors du chargement du programme :', error));
+    </script>
 </body>
 </html>
