--- a/about.html
+++ b/about.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="./index.html" class="header-link">
-        <header>
-            <h1>Journée de l'école doctorale SPI 2025</h1>
-        </header>
-    </a>
+    <div id="header"></div>
 
     <main>
         <h2>A propos de cette journée</h2>
@@ -31,11 +27,9 @@
             </ul>
         </nav>
     </main>
+    
+    <div id="footer"></div>
 
-
-
-    <footer>
-        <p>&copy; 2024 Ecole Doctorale SPI - Univ. Bordeaux. Tous droits réservés.</p>
-    </footer>
+    <script src="script/load_header-footer.js"></script>
 </body>
 </html>
