--- a/photo-contest.html
+++ b/photo-contest.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="./index.html" class="header-link">
-        <header>
-            <h1>Journée de l'école doctorale SPI 2025</h1>
-        </header>
-    </a>
+    <div id="header"></div>
 
     <main>
         <section class="gallery">
@@ -30,9 +26,9 @@
         </nav>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Ecole Doctorale SPI - Univ. Bordeaux. Tous droits réservés.</p>
-    </footer>
+    <div id="footer"></div>
+
+    <script src="script/load_header-footer.js"></script>
 
     <script>
         // Charger et afficher les données JSON
