lien vers schedule incorrect

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <script>
         // Fonction pour charger le programme
-        fetch('schedule.json')
+        fetch('data/schedule.json')
             .then(response => response.json())
             .then(data => {
                 // Remplir la section Infos pratiques avec la date et le lieu
