lien HTTPS + test pop up description

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <script>
         // Fonction pour charger le programme
-        fetch('data/schedule.json')
+        fetch("https://jed-spi.github.io/data/schedule.json")
             .then(response => response.json())
             .then(data => {
                 // Remplir la section Infos pratiques avec la date et le lieu
