--- a/photo-contest.html
+++ b/photo-contest.html
@@ -12,6 +12,8 @@
     <main>
         <section class="gallery">
             <h2>Galerie du concours photos</h2>
+            <p>Cliquer sur l'image pour la voir intégralement. <br>
+                Appuyer sur [suite] pour lire la description complète.</p>
             <div class="gallery-grid" id="gallery"></div>
         </section>
 
