--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A propos</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/vnd.icon" href="data/favicon.ico">
 </head>
 <body>
     <div id="header"></div>
@@ -18,6 +19,9 @@
         <p>
             Cette journée est organisée par les doctorants élus au conseil de l'école doctorale avec le support de l'école doctorale. Merci à l'équipe: Tarek Bouzar, Florian Crouau, Joanna d'Antoni, Margaux Francois, Pierre Minier, Joshua Mounier, Josue Nkaya-Nkaya, Christian Robinet De Saint-Omer.
         </p>
+        <p>
+            Le site de l'édition 2024 est disponible <a href="https://jed-spi2024.sciencesconf.org/">ici</a>.
+        </p>
         <br>
         <nav id="rubriques">
             <h2>Navigation</h2>
@@ -27,7 +31,7 @@
             </ul>
         </nav>
     </main>
-    
+
     <div id="footer"></div>
 
     <script src="script/load_header-footer.js"></script>
