--- a/association.html
+++ b/association.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAP Sciences</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/vnd.icon" href="data/favicon.ico">
 </head>
 <body>
     <div id="header"></div>
