--- a/photo-contest.html
+++ b/photo-contest.html
@@ -12,7 +12,7 @@
 
     <main>
         <section class="gallery">
-            <h2>Galerie du concours photos</h2>
+            <h2>Galerie photos</h2>
             <p>Cliquer sur l'image pour la voir intégralement. <br>
                 Appuyer sur [suite] pour lire la description complète.</p>
             <div class="gallery-grid" id="gallery"></div>
