--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h2>Informations Pratiques</h2>
             <p><strong>Date :</strong> <span id="date"></span></p>
             <p><strong>Lieu :</strong> <span id="lieu"></span></p>
+            <p><strong>Vote :</strong> <a href="https://linktr.ee/jed_spi">linktr.ee/jed_spi</a> </p>
         </section>
 
         <!-- Section du programme de la journée -->
