--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Journée ED SPI 2025</title>
     <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/index.css">
     <link rel="icon" type="image/vnd.icon" href="data/favicon.ico">
 </head>
 <body>
@@ -13,8 +14,18 @@
     <main>
         <section id="infos-pratiques" class="card">
             <h2>Journée ED SPI 2025</h2>
-            <p><strong>Date :</strong> <span id="date"></span></p>
-            <p><strong>Lieu :</strong> <span id="lieu"></span></p>
+
+            <div class="info-container">
+                <div class="info-row">
+                    <span class="label">Date :</span>
+                    <span id="date">À définir</span>
+                </div>
+                <div class="info-row">
+                    <span class="label">Lieu :</span>
+                    <span id="lieu">À définir</span>
+                </div>
+            </div>
+
             <p><a href="https://linktr.ee/jed_spi" class="btn">Votes</a></p>
         </section>
 
